kubernetes-phonebook-micro/pb-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pb-micro
  name: pb-db-deployment
  labels:
    app: pbdbapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pbdbapp
  template:
    metadata:
      labels:
        app: pbdbapp
    spec:
      containers:
        - name: search-db-app
          image: mysql:5.7
          ports:
          - containerPort: 3306
          volumeMounts:
            - name: dbpvpb
              mountPath: /var/lib/mysql
      volumes:
        - name: dbpvpb
          persistentVolumeClaim:
            claimName: pbpvc

---
apiVersion: v1
kind: Service
metadata:
  namespace: pb-micro
  name: pb-db-service
spec:
  type: ClusterIP
  selector:
    app: pbdbapp
  ports:
  - port: 3306
    targetPort: 3306
